--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,13 @@ http {
     location / {
       proxy_pass http://docker-nginx;
     }
+    location /nginx {
+      rewrite /nginx/(.*) /$1 break;
+      proxy_pass http://docker-nginx;
+    }
+    location /apache {
+      proxy_pass http://docker-apache;
+    }
   }
   server {
     listen 8081;
