--- a/nginx.conf
+++ b/nginx.conf
@@ -13,11 +13,12 @@ http {
     location / {
       proxy_pass http://docker-nginx;
     }
-    location /nginx {
+    location /nginx/ {
       rewrite /nginx/(.*) /$1 break;
       proxy_pass http://docker-nginx;
     }
-    location /apache {
+    location /apache/ {
+      rewrite /apache/(.*) /$1 break;
       proxy_pass http://docker-apache;
     }
   }
