--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,9 @@ http {
   upstream docker-apache {
     server apache_service:80;
   }
+  upstream docker-node {
+    server node_service:3000;
+  }
   server {
     listen 80;
     location / {
@@ -16,6 +19,10 @@ http {
     location /apache/ {
       rewrite /apache/(.*) /$1 break;
       proxy_pass http://docker-apache;
+    }
+    location /node/ {
+      rewrite /node/(.*) /$1 break;
+      proxy_pass http://docker-node;
     }
   }
 }
