--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,6 @@ services:
     build: .
     ports:
       - 80:80
-      - 8080:8080
-      - 8081:8081
-      - 8082:8082
-      - 8083:8083
-      - 8084:8084
     restart: always
   nginx_service:
     image: nginx_image
@@ -25,4 +20,11 @@ services:
     build: ./apache
     ports:
       - 80
+    restart: always
+  node_service:
+    image: node_image
+    container_name: node_container
+    build: ./node
+    ports:
+      - 3000
     restart: always
