--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,10 @@ services:
     ports:
       - 3000
     restart: always
+  node2_service:
+    image: node2_image
+    container_name: node2_container
+    build: ./node2
+    ports:
+      - 3000
+    restart: always
