--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,9 @@ http {
   upstream docker-node {
     server node_service:3000;
   }
+  upstream docker-node2 {
+    server node2_service:3000;
+  }
   server {
     listen 80;
     location / {
@@ -23,6 +26,10 @@ http {
     location /node/ {
       rewrite /node/(.*) /$1 break;
       proxy_pass http://docker-node;
+    }
+    location /node2/ {
+      rewrite /node2/(.*) /$1 break;
+      proxy_pass http://docker-node2;
     }
   }
 }
