--- a/nginx.conf
+++ b/nginx.conf
@@ -17,15 +17,15 @@ http {
   server {
     listen 80;
     location / {
-      proxy_pass http://docker-nginx;
+      proxy_pass http://docker-node;
     }
     location /apache/ {
       rewrite /apache/(.*) /$1 break;
       proxy_pass http://docker-apache;
     }
-    location /node/ {
-      rewrite /node/(.*) /$1 break;
-      proxy_pass http://docker-node;
+    location /nginx/ {
+      rewrite /nginx/(.*) /$1 break;
+      proxy_pass http://docker-nginx;
     }
     location /node2/ {
       rewrite /node2/(.*) /$1 break;
