--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     ports:
       - 80
     restart: always
+    depends_on:
+      - reverseproxy_service
   apache_service:
     image: apache_image
     container_name: apache_container
@@ -21,6 +23,8 @@ services:
     ports:
       - 80
     restart: always
+    depends_on:
+      - reverseproxy_service
   node_service:
     image: node_image
     container_name: node_container
@@ -28,6 +32,8 @@ services:
     ports:
       - 3000
     restart: always
+    depends_on:
+      - reverseproxy_service
   node2_service:
     image: node2_image
     container_name: node2_container
@@ -35,3 +41,5 @@ services:
     ports:
       - 3000
     restart: always
+    depends_on:
+      - reverseproxy_service
