--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.9'
 services:
-  reverseproxy_service:
+  reverseproxy:
     image: reverseproxy_image
     container_name: reverseproxy_container
     build: .
     ports:
       - 80:80
     restart: always
-  nginx_service:
+  nginx:
     image: nginx_image
     container_name: nginx_container
     build: ./nginx
@@ -15,8 +15,8 @@ services:
       - 80
     restart: always
     depends_on:
-      - 'reverseproxy_service'
-  apache_service:
+      - 'reverseproxy'
+  apache:
     image: apache_image
     container_name: apache_container
     build: ./apache
@@ -24,8 +24,8 @@ services:
       - 80
     restart: always
     depends_on:
-      - 'reverseproxy_service'
-  node_service:
+      - 'reverseproxy'
+  node:
     image: node_image
     container_name: node_container
     build: ./node
@@ -33,8 +33,8 @@ services:
       - 3000
     restart: always
     depends_on:
-      - 'reverseproxy_service'
-  node2_service:
+      - 'reverseproxy'
+  node2:
     image: node2_image
     container_name: node2_container
     build: ./node2
@@ -42,4 +42,4 @@ services:
       - 3000
     restart: always
     depends_on:
-      - 'reverseproxy_service'
+      - 'reverseproxy'
