--- a/nginx.conf
+++ b/nginx.conf
@@ -3,16 +3,16 @@ events { worker_connections 1024; }
 http {
   sendfile on;
   upstream docker-nginx {
-    server nginx_service:80;
+    server nginx:80;
   }
   upstream docker-apache {
-    server apache_service:80;
+    server apache:80;
   }
   upstream docker-node {
-    server node_service:3000;
+    server node:3000;
   }
   upstream docker-node2 {
-    server node2_service:3000;
+    server node2:3000;
   }
   server {
     listen 80;
