--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,30 @@
 version: '3.9'
 services:
-  reverseproxy:
-    image: okteto.dev/reverseproxy_image
-    container_name: reverseproxy_container
-    build: .
-    ports:
-      - 80:80
-    restart: always
-  nginx:
-    image: okteto.dev/nginx_image
-    container_name: nginx_container
-    build: ./nginx
-    ports:
-      - 80
-    restart: always
-    depends_on:
-      - reverseproxy
-  apache:
-    image: okteto.dev/apache_image
-    container_name: apache_container
-    build: ./apache
-    ports:
-      - 80
-    restart: always
-    depends_on:
-      - reverseproxy
+  # reverseproxy:
+  #   image: okteto.dev/reverseproxy_image
+  #   container_name: reverseproxy_container
+  #   build: .
+  #   ports:
+  #     - 80:80
+  #   restart: always
+  # nginx:
+  #   image: okteto.dev/nginx_image
+  #   container_name: nginx_container
+  #   build: ./nginx
+  #   ports:
+  #     - 80
+  #   restart: always
+  #   depends_on:
+  #     - reverseproxy
+  # apache:
+  #   image: okteto.dev/apache_image
+  #   container_name: apache_container
+  #   build: ./apache
+  #   ports:
+  #     - 80
+  #   restart: always
+  #   depends_on:
+  #     - reverseproxy
   node:
     image: okteto.dev/node_image
     container_name: node_container
@@ -32,8 +32,8 @@ services:
     ports:
       - 3000
     restart: always
-    depends_on:
-      - reverseproxy
+    # depends_on:
+    #   - reverseproxy
   node2:
     image: okteto.dev/node2_image
     container_name: node2_container
@@ -41,5 +41,5 @@ services:
     ports:
       - 3000
     restart: always
-    depends_on:
-      - reverseproxy
+    # depends_on:
+    #   - reverseproxy
